[package]
name = "pow-pinocchio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio = { version = "0.10.2", features = ["cpi"] }
pinocchio-token = "0.5.0"
solana-address = { version = "=2.5.0", features = ["curve25519"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2 = { version = "0.10.9", default-features = false }

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = ['cfg(target_os, values("solana"))']
